Journal search alternative solution